Feat: Several new recipes added

--- a/recipes/resturant-style-potato-salad.html
+++ b/recipes/resturant-style-potato-salad.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resturant-style Potato Salad</title>
+    <title>Restaurant-style Potato Salad</title>
 </head>
 <body>
-    <h1>Resturant-style Potato Salad</h1>
+    <h1>Restaurant-style Potato Salad</h1>
     <img src="../images/potato-salad.jpg" alt="Potato Salad" width="600" height="450" >
     <h2>Description</h2>
     <p>This is a traditional and easy-to-make russet potato salad recipe.</p>
