--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/watermelon-feta-salad.html">Watermelon Feta Salad</a>
-    <a href="./recipes/resturant-style-potato-salad.html">resturant-style-potato-salad</a>
+    <ul>
+        <li><a href="./recipes/watermelon-feta-salad.html">Watermelon Feta Salad</a></li>
+        <li><a href="./recipes/resturant-style-potato-salad.html">Restaurant-style Potato Salad</a></li>
+        <li><a href="./recipes/homemade-beef-jerky.html">Homemade Beef Jerky</a></li>
+    </ul>
 </body>
 </html>
