FEAT: Added style sheet and styled accordingly

--- a/index.html
+++ b/index.html
@@ -5,13 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/watermelon-feta-salad.html">Watermelon Feta Salad</a></li>
-        <li><a href="./recipes/resturant-style-potato-salad.html">Restaurant-style Potato Salad</a></li>
-        <li><a href="./recipes/homemade-beef-jerky.html">Homemade Beef Jerky</a></li>
+    <header class="index-header">
+        <h1 class="heading">Odin Recipes</h1>
+    </header>
+    <ul class="recipies">
+        <li>
+            <a href="./recipes/watermelon-feta-salad.html">Watermelon Feta Salad
+            <img src="./images/watermelon-feta-salad-france-c-4x3-1-2000-9fce019e8ca24116b29835f41ac8fb1f.jpg" alt="Watermelon Feta Salad" height="200" width="300"></a>
+        </li>
+        <li>
+            <a href="./recipes/resturant-style-potato-salad.html">Restaurant-style Potato Salad
+            <img src="./images/potato-salad.jpg" alt="Restaurant-style Potato Salad" height="200" width="300"></a>
+        </li>
+        <li>
+            <a href="./recipes/homemade-beef-jerky.html">Homemade Beef Jerky
+            <img src="./images/beef-jerky.jpg" alt="Homemade Beef Jerky" height="200" width="300"></a>
+        </li>
     </ul>
 </body>
 </html>
