--- a/recipes/homemade-beef-jerky.html
+++ b/recipes/homemade-beef-jerky.html
@@ -5,14 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Homemade Beef Jerky</title>
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-  <h1>Homemade Beef Jerky</h1>
-  <img src="../images/beef-jerky.jpg" alt="Beef Jerky" width="650" height="450">
-  <h2>Description</h2>
+  <h1 class="heading">Homemade Beef Jerky</h1>
+  <img class="desc-image" src="../images/beef-jerky.jpg" alt="Beef Jerky" width="650" height="450">
+  <h2 class="heading">Description</h2>
   <p>This beef jerky recipe uses a relatively quick method. While you can find many artisan brands out there, making homemade beef jerky is fun, easy, and all the rage! Have your butcher slice the beef for you.</p>
-  <h3>Ingredients</h3>
-  <ul>
+  <h3 class="heading">Ingredients</h3>
+  <ul class="description">
     <li>3/4 cup Worcestershire sauce</li>
     <li>3/4 cup soy</li>
     <li>1 tablespoon smoked paprika</li>
@@ -23,8 +24,8 @@
     <li>1 tablespoon onion powder</li>
     <li>2 pounds beef top round, thinly sliced</li>
   </ul>
-  <h3>Directions</h3>
-  <ol>
+  <h3 class="heading">Directions</h3>
+  <ol class="directions">
     <li>Whisk together Worcestershire sauce, soy sauce, smoked paprika, honey, black pepper, red pepper flakes, garlic powder, and onion powder in a large bowl. Add beef; mix until completely coated with marinade. Cover the bowl with plastic wrap and marinate in the refrigerator, 3 hours to overnight.</li>
     <li>Preheat the oven to 175 degrees F (80 degrees C). Line a baking sheet with aluminum foil and place a wire rack on top.</li>
     <li>Transfer beef to paper towels to dry. Discard marinade.</li>
@@ -33,7 +34,8 @@
     <li>Cut jerky with scissors into bite-sized pieces.</li>
     <li>Enjoy!</li>
   </ol>
-  <table>
+  <h3 class="heading">Nutritional Information</h3>
+  <table class="nutritional">
     <thead>
       <tr>
         <th>Calories</th>
@@ -52,5 +54,7 @@
     </tbody>
   </table>
 </body>
-<a href="../index.html">back to recipes</a>
+ <div class="back-button" >
+  <a href="../index.html">Return to recipes</a>
+</div>
 </html>
