--- a/recipes/resturant-style-potato-salad.html
+++ b/recipes/resturant-style-potato-salad.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant-style Potato Salad</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <h1>Restaurant-style Potato Salad</h1>
-    <img src="../images/potato-salad.jpg" alt="Potato Salad" width="600" height="450" >
-    <h2>Description</h2>
+    <h1 class="heading">Restaurant-style Potato Salad</h1>
+    <img class="desc-image" src="../images/potato-salad.jpg" alt="Potato Salad" width="600" height="450" >
+    <h2 class="heading">Description</h2>
     <p>This is a traditional and easy-to-make russet potato salad recipe.</p>
-    <h3>Ingredients</h3>    
-    <ul>
+    <h3 class="heading">Ingredients</h3>    
+    <ul class="description">
         <li>2 pounds russet potatoes</li>
         <li>1 cup mayonnaise</li>
         <li>4 teaspoons sweet pickle relish</li>
@@ -26,13 +27,13 @@
         <li>1/4 teaspoon ground black pepper</li>
         <li>salt to taste</li>
     </ul>
-    <h3>Directions</h3>
-    <ol>
+    <h3 class="heading">Directions</h3>
+    <ol class="directions">
         <li>Bring a large pot of salted water to a boil. Add potatoes and cook until tender but still firm, about 15 minutes. Drain, cool, and chop.</li>
         <li>In a large bowl, combine potatoes, mayonnaise, sweet pickle relish, sugar, onion, mustard, vinegar, celery, pimentos, carrot, parsley, pepper, and salt. Mix well, chill and serve.</li>
     </ol>
-    <h3>Nutritional Information</h3>
-    <table>
+    <h3 class="heading">Nutritional Information</h3>
+    <table class="nutritional">
         <thead>
             <tr>
                 <th>Calories</th>
@@ -50,6 +51,8 @@
             </tr>
         </tbody>
     </table>
-    <a href="../index.html">back to recipes</a>
+    <div class="back-button" >
+        <a href="../index.html">Return to recipes</a>
+    </div>
 </body>
 </html>
