--- a/recipes/watermelon-feta-salad.html
+++ b/recipes/watermelon-feta-salad.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Watermelon Feta Salad</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <h1>Watermelon Feta Salad</h1>
-    <img src="../images/watermelon-feta-salad-france-c-4x3-1-2000-9fce019e8ca24116b29835f41ac8fb1f.jpg" alt="watermelon-feta-salad" width="600" height="450" >
-    <h2>Description</h2>
+    <h1 class="heading">Watermelon Feta Salad</h1>
+    <img class="desc-image" src="../images/watermelon-feta-salad-france-c-4x3-1-2000-9fce019e8ca24116b29835f41ac8fb1f.jpg" alt="watermelon-feta-salad" width="600" height="450" >
+    <h2 class="heading">Description</h2>
     <p>This chunky watermelon feta salad with arugula and tomatoes is enjoyed by all. Thanks to the watermelon, the kids like it also!</p>
-    <h3>Ingredients</h3>
-    <ul>
+    <h3 class="heading">Ingredients</h3>
+    <ul class="description">
         <li>3 tablespoons olive oil</li>
         <li>2 teaspoons of balsamic vinegar</li>
         <li>8 ounces grape tomatoes, halved</li>
@@ -21,12 +22,12 @@
         <li>2 pounds watermelon</li>
         <li>4 ounces feta cheese, cut into 1/4 inch cubes</li>
     </ul>
-    <h3>Directions</h3>
-    <ol>
+    <h3 class="heading">Directions</h3>
+    <ol class="directions">
         <li>Whisk olive oil, vinegar, and salt together in a large mixing bowl. Add tomatoes, arugula, and red onion; toss to coat. Gently stir in watermelon and feta cheese to serve.</li>
     </ol>
-    <h3>Nutritional Information</h3>
-    <table>
+    <h3 class="heading">Nutritional Information</h3>
+    <table class="nutritional">
         <thead>
             <tr>
                 <th>Calories</th>
@@ -44,6 +45,8 @@
             </tr>
         </tbody>
     </table>
-    <a href="../index.html">back to recipes</a>
+    <div class="back-button" >
+        <a href="../index.html">Return to recipes</a>
+    </div>
 </body>
 </html>
